<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_text"
        android:id="@+id/textView8"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userName_text"
        android:id="@+id/textView9"
        android:layout_marginTop="99dp"
        android:textSize="40dp"
        android:layout_below="@+id/textView8"
        android:layout_toLeftOf="@+id/userName"
        android:layout_toStartOf="@+id/userName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userPassword_text"
        android:id="@+id/textView10"
        android:textSize="40dp"
        android:layout_below="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginTop="111dp" />

    <EditText
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:id="@+id/userName"
        android:textSize="40sp"
        android:layout_above="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/userPassword"
        android:textSize="40sp"
        android:layout_alignBottom="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/attempts"
        android:id="@+id/attempts"
        android:layout_marginTop="35dp"
        android:textSize="40sp"
        android:layout_below="@+id/textView10"
        android:layout_marginLeft="510dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/loginAttempts"
        android:textSize="40sp"
        android:layout_alignTop="@+id/attempts"
        android:layout_toRightOf="@+id/attempts"
        android:layout_toEndOf="@+id/attempts"
        android:layout_marginLeft="50dp"
        android:background="#feffbe" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginUser"
        android:id="@+id/LoginBtn"
        android:textSize="40sp"
        android:layout_alignTop="@+id/loginAttempts"
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="1100dp"/>
</RelativeLayout>